# RP2350-Touch-AMOLED-1.75

./: .gitignore  LICENSE  README.md  README_ZH.md
examples/Arduino/01_GUI/: 01_GUI.ino  AMOLED_1in75.h  AXP2101.cpp  AXP2101.h  CST9217.cpp  DEV_Config.cpp  DEV_Config.h  Debug.h  GUI_Paint.cpp  LCD_test.h  PCF85063A.cpp  PCF85063A.h  XPowersParams.h  fonts.h  image.h  psram_tool.h  qspi_pio.cpp  qspi_pio.h  rp_pico_alloc.cpp  rp_pico_alloc.h  tlsf.cpp
examples/Arduino/02_LVGL/: 02_LVGL.ino  AMOLED_1in75.cpp  CST9217.cpp  DEV_Config.cpp  GUI_Paint.cpp  GUI_Paint.h  ImageData.cpp  ImageData.h  LCD_Test.h  LVGL_example.cpp  LVGL_example.h  QMI8658.cpp  qspi_pio.cpp
examples/C/01_GUI/: CMakeLists.txt  main.c
examples/C/01_GUI/lib/AMOLED/: AMOLED_1in75.c  AMOLED_1in75.h  CMakeLists.txt
examples/C/01_GUI/lib/AXP2101/: AXP2101.c  CMakeLists.txt
examples/C/01_GUI/lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
examples/C/01_GUI/lib/Fonts/: font12CN.c  fonts.h
examples/C/01_GUI/lib/GUI/: GUI_Paint.c  GUI_Paint.h
examples/C/01_GUI/lib/QSPI_PIO/: qspi.pio  qspi.pio.h  qspi_pio.c
examples/C/01_GUI/lib/Touch/: CMakeLists.txt  CST9217.h
examples/C/02_ES8311/: CMakeLists.txt  ReadmeCN.txt  ReadmeEN.txt  main.c
examples/C/02_ES8311/lib/: music.h
examples/C/02_ES8311/lib/audio_data/: CMakeLists.txt  audio_data.c  audio_data.h
examples/C/02_ES8311/lib/audio_pio/: CMakeLists.txt  audio_pio.c  audio_pio.h  audio_pio.pio  audio_pio.pio.h
examples/C/02_ES8311/lib/config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
examples/C/02_ES8311/lib/es8311/: CMakeLists.txt  es8311.c  es8311.h
examples/C/02_ES8311/python/: wav2data.py
examples/C/02_ES8311/uf2/: Happy_birthday.uf2  Loopback_test.uf2  Sine_440hz.uf2
examples/C/03_FatFs/example/: CMakeLists.txt
examples/C/03_FatFs/example/config/: hw_config.c
examples/C/03_FatFs/src/include/: hw_config.h
examples/C/03_FatFs/src/sd_driver/SDIO/: rp2040_sdio.pio  sd_card_sdio.c
examples/C/04_GPS_I2C/: CMakeLists.txt  main.c
examples/C/05_LVGL/: CMakeLists.txt  main.c
examples/C/05_LVGL/examples/: CMakeLists.txt
examples/C/05_LVGL/examples/inc/: ImageData.h  LCD_test.h  lv_conf.h
examples/C/05_LVGL/examples/src/: AMOLED_1in75_LVGL_test.c  ImageData.c  LVGL_example.c
examples/C/05_LVGL/lib/AMOLED/: AMOLED_1in75.c
examples/C/05_LVGL/lib/Config/: DEV_Config.c  DEV_Config.h
examples/C/05_LVGL/lib/PCF85063A/: CMakeLists.txt  PCF85063A.c
examples/C/05_LVGL/lib/PSRAM/: CMakeLists.txt  psram_tool.c  psram_tool.h  rp_pico_alloc.c  rp_pico_alloc.h
examples/C/05_LVGL/lib/PSRAM/tlsf/: tlsf.c
examples/C/05_LVGL/lib/QMI8658/: CMakeLists.txt  QMI8658.c
examples/C/05_LVGL/lib/QSPI_PIO/: CMakeLists.txt  qspi.pio  qspi_pio.c  qspi_pio.h
examples/C/05_LVGL/lib/Touch/: CST9217.c  CST9217.h
examples/C/05_LVGL/lib/Touch/Touch/: CST9217.c
examples/C/05_LVGL/lib/lvgl/src/core/: lv_refr.c
examples/MicroPython/01_SD/: ReadmeCN.txt  ReadmeEN.txt  boot.py
examples/MicroPython/02_RTC/: test_rtc.py
examples/MicroPython/03_IMU/: test_imu.py
examples/MicroPython/04_GPS_UART/: l76x.py
examples/MicroPython/04_GPS_UART/example/: coordinates_converted.py  gnss_settings.py  print_nmea0183.py
firmware/C/: 01_GUI.uf2  02_ES8311.uf2  03_FatFs.uf2  04_GPS_I2C.uf2  05_LVGL.uf2
firmware/MicroPython/: RPI_PICO2-20250415-v1.25.0.uf2
